aab7ecd0-0e99-4fa4-920f-fb35e6d08b32

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}.swiper-slide{height:80vh;}.swiper-slide img{height:100%;}.swiper-button-next{color:white;}.swiper-button-prev{color:white;}.slider-slide-content{transform:translate(-50%, -50%);}#ixofj{color:red;}#i1e4n{color:blue;}
+* { box-sizing: border-box; } body {margin: 0;}.swiper{height:80vh;}.swiper-slide{height:80vh !important;}.swiper-slide-content{bottom:15%;}.swiper-slide img{height:100%;}.swiper-button-next{color:white;}.swiper-button-prev{color:white;}.slider-slide-content{transform:translate(-50%, -50%);}
 
 </style>
 
@@ -79,7 +79,79 @@
 		<html>
  <head></head>
  <body id="in3v">
-  <div id="i0rv">
+  <div id="iaa2">
+   <div class="swiper w-100 testimonial-swiper-one my-4 border">
+    <div class="swiper-wrapper">
+     <div class="swiper-slide position-relative">
+      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
+       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
+       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
+       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
+      </div>
+     </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+   </div>
+  </div>
+  <div id="is5cs">
+   <div class="swiper w-100 testimonial-swiper-two my-4">
+    <div class="swiper-wrapper">
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">First Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Second Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Third Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fourth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fifth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Sixt Slide</p>
+      </div>
+     </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+   </div>
+  </div>
+  <div id="i5fo1">
    <div class="swiper w-100 testimonial-swiper-three my-4 border">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
@@ -95,72 +167,176 @@
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/mi23121202/ASSET/web-builder-ui.png" alt="swiper-image" id="ige71" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2" id="ixofj">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-    </div>
-    <div class="swiper-button-next" id="ivl3v"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination text-white"></div>
-   </div>
-  </div>
-  <div id="i8ms4">
-   <div class="swiper w-100 testimonial-swiper-three my-4 border">
-    <div class="swiper-wrapper">
-     <div class="swiper-slide position-relative">
-      <img src="https://images.unsplash.com/photo-1625334666162-8ad10e7332d2?q=80&amp;w=1974&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2" id="i1e4n">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/mi23121202/ASSET/web-builder-ui.png" alt="swiper-image" id="iu6mi" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
       <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
       <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
        <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="i63wl"></div>
+    <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination text-white"></div>
    </div>
   </div>
-  <div id="ix89j">
-   <div class="swiper w-100 testimonial-swiper-three my-4 border">
-    <div class="swiper-wrapper">
-     <div class="swiper-slide position-relative">
-      <img src="https://images.unsplash.com/photo-1625334666162-8ad10e7332d2?q=80&amp;w=1974&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://images.unsplash.com/photo-1638864616275-9f0b291a2eb6?q=80&amp;w=1964&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
-      </div>
-     </div>
-    </div>
-    <div class="swiper-button-next" id="irovz"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination text-white"></div>
-   </div>
-  </div>
-  <script>var items = document.querySelectorAll('#i0rv, #i8ms4, #ix89j');
+  <script>var items = document.querySelectorAll('#iaa2');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+// Check if Swiper CSS is already added
+        if (!document.querySelector('link[href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"]')) {
+            // Dynamically add Swiper CSS to the head element
+            const swiperCssLink = document.createElement('link');
+            swiperCssLink.rel = 'stylesheet';
+            swiperCssLink.href = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css';
+            document.head.appendChild(swiperCssLink);
+        }
+        // Check if Swiper JS is already added
+        if (!document.querySelector('script[src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"]')) {
+            // Dynamically add Swiper JS to the head element
+            const swiperJsScript = document.createElement('script');
+            swiperJsScript.src = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js';
+            document.head.appendChild(swiperJsScript);
+            // Wait for the Swiper JS to be loaded before initializing
+            swiperJsScript.onload = function () {
+                // Swiper initialization
+                // @ts-ignore
+                let swiper = new Swiper(".testimonial-swiper-one", {
+                    slidesPerView: 1,
+                    spaceBetween: 30,
+                    loop: true,
+                    navigation: {
+                        nextEl: ".swiper-button-next",
+                        prevEl: ".swiper-button-prev",
+                    },
+                    pagination: {
+                        el: '.swiper-pagination',
+                        type: 'bullets',
+                    },
+                    autoplay: true,
+                });
+            };
+        }
+        else {
+            // Swiper JS is already added, directly initialize Swiper
+            // @ts-ignore
+            let swiper = new Swiper(".testimonial-swiper-one", {
+                slidesPerView: 1,
+                spaceBetween: 30,
+                loop: true,
+                navigation: {
+                    nextEl: ".swiper-button-next",
+                    prevEl: ".swiper-button-prev",
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    type: 'bullets',
+                },
+                autoplay: true,
+            });
+        }
+}.bind(items[i]))();
+          }
+          var items = document.querySelectorAll('#is5cs');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+// Check if Swiper CSS is already added
+        if (!document.querySelector('link[href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"]')) {
+            // Dynamically add Swiper CSS to the head element
+            const swiperCssLink = document.createElement('link');
+            swiperCssLink.rel = 'stylesheet';
+            swiperCssLink.href = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css';
+            document.head.appendChild(swiperCssLink);
+        }
+        // Check if Swiper JS is already added
+        if (!document.querySelector('script[src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"]')) {
+            // Dynamically add Swiper JS to the head element
+            const swiperJsScript = document.createElement('script');
+            swiperJsScript.src = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js';
+            document.head.appendChild(swiperJsScript);
+            // Wait for the Swiper JS to be loaded before initializing
+            swiperJsScript.onload = function () {
+                // Swiper initialization
+                // @ts-ignore
+                let swiper = new Swiper(".testimonial-swiper-two", {
+                    slidesPerView: 1,
+                    spaceBetween: 30,
+                    loop: true,
+                    navigation: {
+                        nextEl: ".swiper-button-next",
+                        prevEl: ".swiper-button-prev",
+                    },
+                    pagination: {
+                        el: '.swiper-pagination',
+                        type: 'bullets',
+                    },
+                    // autoplay: true,
+                    breakpoints: {
+                        640: {
+                            slidesPerView: 1,
+                            spaceBetween: 20,
+                        },
+                        768: {
+                            slidesPerView: 2,
+                            spaceBetween: 40,
+                        },
+                        1024: {
+                            slidesPerView: 3,
+                            spaceBetween: 50,
+                        },
+                        1440: {
+                            slidesPerView: 4,
+                            spaceBetween: 60,
+                        },
+                        1800: {
+                            slidesPerView: 5,
+                            spaceBetween: 70
+                        }
+                    },
+                });
+            };
+        }
+        else {
+            // Swiper JS is already added, directly initialize Swiper
+            // @ts-ignore
+            let swiper = new Swiper(".testimonial-swiper-two", {
+                slidesPerView: 1,
+                spaceBetween: 30,
+                loop: true,
+                navigation: {
+                    nextEl: ".swiper-button-next",
+                    prevEl: ".swiper-button-prev",
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    type: 'bullets',
+                },
+                // autoplay: true,
+                breakpoints: {
+                    640: {
+                        slidesPerView: 1,
+                        spaceBetween: 20,
+                    },
+                    768: {
+                        slidesPerView: 2,
+                        spaceBetween: 40,
+                    },
+                    1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 50,
+                    },
+                    1440: {
+                        slidesPerView: 4,
+                        spaceBetween: 60,
+                    },
+                    1800: {
+                        slidesPerView: 5,
+                        spaceBetween: 70
+                    }
+                },
+            });
+        }
+}.bind(items[i]))();
+          }
+          var items = document.querySelectorAll('#i5fo1');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 // Check if Swiper CSS is already added
