--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
      </div>
     </div>
-    <div class="swiper-button-next"></div>
+    <div class="swiper-button-next" id="i0ai2"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
    </div>
@@ -146,7 +146,7 @@
       </div>
      </div>
     </div>
-    <div class="swiper-button-next"></div>
+    <div class="swiper-button-next" id="imdx2"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
    </div>
@@ -167,13 +167,13 @@
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
-       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
+      <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100" id="i6e1k">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content" id="itn3f">
+       <p class="fs-4 mb-2" id="i32b2">dfdfdf</p><span>Alexa Young, CA</span>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next"></div>
+    <div class="swiper-button-next" id="izqph"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination text-white"></div>
    </div>
